Updating styles to solve annoying behaviors on iOS

--- a/app/styles/global.css
+++ b/app/styles/global.css
@@ -1,5 +1,12 @@
 * {
-    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);  
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+    
+    -webkit-touch-callout: none;
+	-webkit-user-select: none;
+	-khtml-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
 }
 .navbar .nav > li > .dropdown-menu:before{ right:30px !important;}
 
